<resources>
    <string name="app_name">MultiLineRadioGroupDemo</string>
    <string name="text_01">01</string>
    <string name="text_02">02</string>
    <string name="text_03">03</string>
    <string name="text_04">04</string>
    <string name="text_05">05</string>
    <string name="text_06">06</string>
    <string name="text_07">07</string>
    <string name="text_08">08</string>
    <string name="text_09">09</string>
    <string name="text_10">10</string>
    <string name="text_11">11</string>
    <string name="text_12">12</string>
    <string name="text_13">13</string>
    <string name="text_14">14</string>
</resources>
